hphp/hack/test/typecheck/T90599414.php.exp
ERROR: File "T90599414.php", line 6, characters 3-10:
Typing error (Typing[4110])
  File "T90599414.php", line 5, characters 8-13:
  Expected `arraykey`
  File "T90599414.php", line 6, characters 6-9:
  But got `null`
